working login & authentication, added auth http interceptor

--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -18,7 +18,7 @@
             <td>{{customer.description}}</td>
             <td>{{customer.created}}</td>
             <td>{{customer.modified}}</td>
-            <td>{{customer.devices.length}}</td>
+            <!-- <td>{{customer.}}</td> -->
         </tr>
     </tbody>
 
