--- a/src/app/customer/customer-edit/customer-edit.component.html
+++ b/src/app/customer/customer-edit/customer-edit.component.html
@@ -1,1 +1,60 @@
-<p>customer-edit works!</p>
+<h3>Omgeving {{ isNew ? 'toevoegen' : 'aanpassen'}}</h3>
+<hr>
+<form [formGroup]="customerForm"  (ngSubmit)="onSubmit()">
+    <div class="row">
+        <label for="name">Naam</label>
+        <input 
+            type="text" 
+            id="name" 
+            formControlName='name'
+            class="form-control"> 
+    </div>
+    <div class="row">
+        <label for="description">Omschrijving</label>
+        <textarea 
+            type="text" 
+            id="description" 
+            formControlName='description'
+            class="form-control"
+            rows="3"
+            style="resize: none;"
+            >
+        </textarea>
+    </div>
+    <div class="row">
+        <label for="code">Omgevingscode</label>
+        <input 
+            type="text" 
+            id="code" 
+            formControlName='code'
+            class="form-control"> 
+    </div>
+    <div class="row">
+        <label for="server">Server endpoint</label>
+        <input 
+            type="text" 
+            id="server" 
+            formControlName='server'
+            class="form-control"> 
+    </div>
+    <div class="row">
+        <label for="maxDevices">Maximaal aantal devices</label>
+        <input 
+            type="number" 
+            id="maxDevices" 
+            formControlName='maxDevices'
+            class="form-control"> 
+    </div>
+    <hr>
+    <div class="row">
+        <button 
+            class="btn btn-primary" 
+            type="submit"
+            [disabled]="!customerForm.valid"
+            >
+            {{ isNew ? 'Toevoegen' : 'Aanpassen'}}
+        </button>
+        <button class="btn btn-danger" [routerLink]="['../']">Annuleren</button>
+    </div>
+    
+</form>
