--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,28 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 10px;">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <a href="#" class="navbar-brand">{{title}}</a>
-
+        <a class="navbar-brand" [routerLink]="['../']">{{title}}</a>
+        <div class="navbar-inner mr-auto">
+            <button 
+                *ngIf="(authService.loggedInSubject | async) === true"
+                class="btn btn-navbar nav-item"
+                [routerLinkActive]="'active'"
+                [routerLink]="['omgevingen']"
+                 >Omgevingen lijst
+            </button>
+            <!-- <button 
+                *ngIf="(authService.loggedInSubject | async) === true"
+                [requireRule]="'appuser'" 
+                class="btn btn-navbar nav-item nav-link"
+                [routerLinkActive]="'active'"
+                [routerLink]="['gebruikers']"
+                 >Gebruikers
+            </button> -->
         </div>
 
-        <div *ngIf="isLoggedIn()">
-            <a style="cursor: pointer;" (click)="onLogout()">Logout</a>
-        </div>
+    <a 
+        *ngIf="(authService.loggedInSubject | async) === true"
+        [requireRule]="'appuser'" 
+        style="cursor: pointer;" 
+        (click)="onLogout()">Logout</a>
     </div>
 </nav>
-
-<!-- <mat-toolbar>
-    <span>{{title}}</span>
-</mat-toolbar> -->
