--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header [title]="title"></app-header>
+<app-header 
+    [title]="title"
+    ></app-header>
 
 <div class="container">
     <div class="row">
