--- a/src/app/customer/customer-edit/customer-edit.component.html
+++ b/src/app/customer/customer-edit/customer-edit.component.html
@@ -1,60 +1,66 @@
-<h3>Omgeving {{ isNew ? 'toevoegen' : 'aanpassen'}}</h3>
-<hr>
-<form [formGroup]="customerForm"  (ngSubmit)="onSubmit()">
-    <div class="row">
-        <label for="name">Naam</label>
-        <input 
-            type="text" 
-            id="name" 
-            formControlName='name'
-            class="form-control"> 
-    </div>
-    <div class="row">
-        <label for="description">Omschrijving</label>
-        <textarea 
-            type="text" 
-            id="description" 
-            formControlName='description'
-            class="form-control"
-            rows="3"
-            style="resize: none;"
-            >
-        </textarea>
-    </div>
-    <div class="row">
-        <label for="code">Omgevingscode</label>
-        <input 
-            type="text" 
-            id="code" 
-            formControlName='code'
-            class="form-control"> 
-    </div>
-    <div class="row">
-        <label for="server">Server endpoint</label>
-        <input 
-            type="text" 
-            id="server" 
-            formControlName='server'
-            class="form-control"> 
-    </div>
-    <div class="row">
-        <label for="maxDevices">Maximaal aantal devices</label>
-        <input 
-            type="number" 
-            id="maxDevices" 
-            formControlName='maxDevices'
-            class="form-control"> 
-    </div>
-    <hr>
-    <div class="row">
-        <button 
-            class="btn btn-primary" 
-            type="submit"
-            [disabled]="!customerForm.valid"
-            >
-            {{ isNew ? 'Toevoegen' : 'Aanpassen'}}
-        </button>
-        <button class="btn btn-danger" [routerLink]="['../']">Annuleren</button>
-    </div>
-    
-</form>
+<mat-card class="col-8 mx-auto text-center">
+    <h3>Omgeving {{ isNew ? 'toevoegen' : 'aanpassen'}}</h3>
+    <form [formGroup]="customerForm"  (ngSubmit)="onSubmit()">
+
+        <div>
+            <mat-form-field appearance="fill">
+                <mat-label>Naam</mat-label>
+                <input 
+                    matInput
+                    formControlName="name"
+                    >
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field appearance="fill">
+                <mat-label>Omschrijving</mat-label>
+                <textarea 
+                    matInput
+                    formControlName="description"
+                    rows="3"
+                    style="resize: none;"
+                ></textarea>
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field appearance="fill">
+                <mat-label>Omgevingscode</mat-label>
+                <input 
+                    matInput
+                    formControlName="code"
+                >
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field appearance="fill">
+                <mat-label>Server endpoint</mat-label>
+                <input 
+                    matInput
+                    formControlName="server"
+                    >
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field appearance="fill">
+                <mat-label>Aantal devices</mat-label>
+                <input 
+                    matInput
+                    type="number"
+                    formControlName='maxDevices'
+                    >
+            </mat-form-field>
+        </div>
+        <div class="row">
+            <button 
+                mat-raised-button color="primary"
+                type="submit"
+                [disabled]="!customerForm.valid"
+                >
+                {{ isNew ? 'Toevoegen' : 'Aanpassen'}}
+            </button>
+            <button 
+                mat-raised-button color="warn" 
+                [routerLink]="['../']">Annuleren</button>
+        </div>
+    </form>
+</mat-card>
