--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -1,36 +1,19 @@
 <button 
-    class="btn btn-primary" 
+    mat-raised-button color="primary"
     [routerLink]="['new']"
     [requireRule]="'customer-add'"
     style="margin-bottom: 15px;"
     >Omgeving toevoegen</button>
 
+    <mat-table [dataSource]="dataSource" #table matSort>
+        <ng-container matColumnDef={{column.id}} *ngFor="let column of columnNames">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> {{column.value}}</mat-header-cell>
+            <mat-cell *matCellDef="let element">{{ getDisplayValue(element, column.id) }}</mat-cell>
+        </ng-container>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th 
-                *ngFor="let head of headElements" 
-                scope="col"
-                > 
-                {{head}}
-            </th>
-        </tr>
-    </thead>
-  
-    <tbody>
-        <tr 
-            *ngFor="let customer of customers" 
-            [routerLink]="[customer.id]"
-            >
-            <td>{{customer.code}}</td>
-            <td>{{customer.name}}</td>
-            <td>{{customer.description}}</td>
-            <td>{{customer.created | date: 'dd-MM-yyyy HH:mm' }}</td>
-            <td>{{customer.registeredDevices}}/{{customer.maxDevices}}</td>
-            <!-- <td>{{customer.}}</td> -->
-        </tr>
-    </tbody>
-
-
-</table>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row 
+            *matRowDef="let row; columns: displayedColumns;"
+            [routerLink]="[row.id]"
+            ></mat-row>
+    </mat-table>
