--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 10px;">
-    <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="['../']">{{title}}</a>
-        <div class="navbar-inner mr-auto">
-            <button 
-                *ngIf="(authService.loggedInSubject | async) === true"
-                class="btn btn-navbar nav-item"
-                [routerLinkActive]="'active'"
-                [routerLink]="['omgevingen']"
-                 >Omgevingen lijst
-            </button>
-            <!-- <button 
-                *ngIf="(authService.loggedInSubject | async) === true"
-                [requireRule]="'appuser'" 
-                class="btn btn-navbar nav-item nav-link"
-                [routerLinkActive]="'active'"
-                [routerLink]="['gebruikers']"
-                 >Gebruikers
-            </button> -->
-        </div>
-
-    <a 
-        *ngIf="(authService.loggedInSubject | async) === true"
-        [requireRule]="'appuser'" 
-        style="cursor: pointer;" 
-        (click)="onLogout()">Logout</a>
-    </div>
-</nav>
+<mat-toolbar style="margin-bottom: 10px;">
+    <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+      </button> -->
+      <span>{{title}}</span>
+      <div>
+          <a mat-button [routerLink]="['omgevingen']"> Omgevingen </a>
+      </div>
+      <span class="example-spacer"></span>
+      <button 
+      *ngIf="(authService.loggedInSubject | async) === true"
+        mat-icon-button class="example-icon" 
+        aria-label="Logout"
+        (click)="onLogout()"
+        >
+        <mat-icon>logout</mat-icon>
+      </button>
+</mat-toolbar>
