--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card class="col-8 mx-auto text-center">
+<mat-card style="text-align: center;" class="col-4 text-center">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div>
             <mat-form-field class="col-5 mt-3 mx-auto">
