--- a/device-activation-portal-angular/src/app/device/device-edit/device-edit.component.html
+++ b/device-activation-portal-angular/src/app/device/device-edit/device-edit.component.html
@@ -1,4 +1,4 @@
-<mat-card class="col-8 mx-auto text-center">
+<mat-card appearance="fill">
   <h3>Device {{ isNew ? 'toevoegen' : 'aanpassen'}}</h3>
   <form [formGroup]="deviceForm" (ngSubmit)="onSubmit()">
 
