--- a/device-activation-portal-angular/src/app/login/login.component.html
+++ b/device-activation-portal-angular/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<mat-card style="text-align: center;" class="col-4 text-center">
+<mat-card style="text-align: center;" appearance="fill">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div>
-            <mat-form-field class="col-5 mt-3 mx-auto">
+            <mat-form-field appearance="outline">
                 <mat-label>Username</mat-label>
                 <input 
                     type="text" 
@@ -11,7 +11,7 @@
             </mat-form-field>
         </div>
         <div>
-            <mat-form-field class="col-5 mt-3 mx-auto">
+            <mat-form-field appearance="outline">
                 <mat-label>Password</mat-label>
                 <input type="password" matInput formControlName="password" placeholder="password">
             </mat-form-field>
